# itmo-system-software

./: .gitignore
lab1/: script.sh
lab2/: script-a.sh  script-b.sh
lab3/: script-a.sh  script-b.sh
lab4/: CMakeLists.txt  Makefile  head.c  head.pl  xargs.c
lab5/: CMakeLists.txt  p3_10.pl  task.h
lab6/: CMakeLists.txt  Makefile  client.c  queue.c  queue.h  server.c
